syntax = "proto3";

package service.ourchat.session.invite_user_to_session.v1;

import "google/protobuf/timestamp.proto";

message InviteUserToSession {
  // invite to which session
  uint64 session_id = 1;
  // inviter
  uint64 inviter_id = 2;
  // leaving a message for invitee
  optional string leave_message = 3;
  // when to expire
  google.protobuf.Timestamp expire_timestamp = 4;
}
